--- a/test-project/views/pages/homepage.ejs
+++ b/test-project/views/pages/homepage.ejs
@@ -2,16 +2,16 @@
   <div style="padding-top: 100px; padding-bottom: 25px; color: #14acc2;" class="d-flex flex-column justify-content-center position-relative" purpose="full-page-hero">
     <div class="container text-center">
       <div style="width: 220px; height: 170px;" class="mx-auto position-relative">
-        <img style="width: 170px; left: 25px; top: 25px;" class="position-absolute" alt="The sky above the ocean" src="/images/hero-sky.png"/>
-        <img style="width: 80px; top: 55px; left: -40px;" class="position-absolute" purpose="cloud-1" alt="A grayish-blue cloud" src="/images/hero-cloud.png"/>
-        <img style="width: 80px; top: 45px; left: -40px;" class="position-absolute" purpose="cloud-2" alt="Another grayish-blue cloud" src="/images/hero-cloud.png"/>
-        <img style="width: 160px; bottom: 50px; left: 18px;" class="position-absolute" purpose="ship" alt="A ship hovering a few feet over the surface of the water, bearing a flagpole with the Sails.js logo" src="/images/hero-ship.png"/>
-        <img style="width: 170px; bottom: 40px; left: 25px;" class="position-absolute" alt="The shadow of the floating ship on the water" src="/images/hero-water.png"/>
+        <!--<img style="width: 170px; left: 25px; top: 25px;" class="position-absolute" alt="The sky above the ocean" src="/images/hero-sky.png"/>-->
+        <!--<img style="width: 80px; top: 55px; left: -40px;" class="position-absolute" purpose="cloud-1" alt="A grayish-blue cloud" src="/images/mylifeinmusic_logo.png"/>-->
+        <!--<img style="width: 80px; top: 45px; left: -40px;" class="position-absolute" purpose="cloud-2" alt="Another grayish-blue cloud" src="/images/mylifeinmusic_logo.png"/>-->
+        <img style="width: 160px; bottom: 50px; left: 18px;" class="position-absolute" purpose="ship" alt="A ship hovering a few feet over the surface of the water, bearing a flagpole with the Sails.js logo" src="/images/mylifeinmusic_logo.png"/>
+        <!--<img style="width: 170px; bottom: 40px; left: 25px;" class="position-absolute" alt="The shadow of the floating ship on the water" src="/images/hero-water.png"/>-->
       </div>
-      <h1 class="display-4 pb-5">A new <strong>Sails</strong> app.</h1>
+      <h1 class="display-4 pb-5">My life in music</h1>
       <div>
         <div style="cursor: pointer; bottom: 25px; left: 0;" class="position-absolute w-100 mt-5" purpose="more-info-text" @click="clickHeroButton()">
-          <div style="letter-spacing: 2px;" class="text-uppercase font-weight-bold">Dive in</div>
+          <div style="letter-spacing: 2px;" class="text-uppercase font-weight-bold">Learn more</div>
           <div style="font-size: 20px;">&darr;</div>
         </div>
       </div>
