--- a/test-project/views/layouts/layout.ejs
+++ b/test-project/views/layouts/layout.ejs
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="/dependencies/fontawesome.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
+
   </head>
   <body>
     <div purpose="page-wrap">
@@ -51,6 +52,7 @@
           <!-- LOGGED-IN NAVIGATION -->
           <% if(me) { %>
           <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="/contact">Help</a>
+          <a class="nav-item nav-link ml-2 ml-md-0 mr-2 mr-md-0" href="test-project\views\pages\dashboard\timeline.html">Timeline</a>
           <!-- Only in desktop nav -->
           <div class="nav-item dropdown d-none d-sm-block">
             <a class="nav-link dropdown-toggle" id="header-account-menu-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
