Working on connecting all resources

--- a/test-project/views/pages/dashboard/timeline.html
+++ b/test-project/views/pages/dashboard/timeline.html
@@ -198,7 +198,7 @@
 <body>
   <!-- Vertical Timeline -->
   <section id="conference-timeline">
-    <div class="timeline-start">Start</div>
+    <div class="timeline-start">1976</div>
     <div class="conference-center-line"></div>
     <div class="conference-timeline-content">
       <!-- Article -->
