adding .ejs and .less files for timeline

--- a/test-project/assets/styles/importer.less
+++ b/test-project/assets/styles/importer.less
@@ -25,6 +25,7 @@
 // Per-page styles
 @import 'pages/homepage.less';
 @import 'pages/dashboard/welcome.less';
+@import 'pages/dashboard/timeline.less';
 @import 'pages/entrance/signup.less';
 @import 'pages/entrance/confirmed-email.less';
 @import 'pages/entrance/login.less';
