--- a/test-project/views/layouts/layout.ejs
+++ b/test-project/views/layouts/layout.ejs
@@ -42,7 +42,10 @@
     <link rel="stylesheet" href="/dependencies/fontawesome.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
-
+    <!-- Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,400italic,700,900' rel='stylesheet' type='text/css'>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <!-- // Fonts -->
   </head>
   <body>
     <div purpose="page-wrap">
