--- a/test-project/views/pages/faq.ejs
+++ b/test-project/views/pages/faq.ejs
@@ -1,4 +1,75 @@
-<div id="faq">
+<!-- Vertical Timeline -->
+<section id="conference-timeline">
+  <div class="timeline-start">1976</div>
+  <div class="conference-center-line"></div>
+  <div class="conference-timeline-content">
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="content-left">
+          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p>
+        </div>
+        <span class="timeline-author">John Doe</span>
+      </div>
+      <div class="content-right-container">
+        <div class="content-right">
+          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. <span class="article-number">02</span></p>
+        </div>
+        <span class="timeline-author">John Doe</span>
+      </div>
+      <div class="meta-date">
+        <span class="date">18</span>
+        <span class="month">APR</span>
+      </div>
+    </div>
+    <!-- // Article -->
+    
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="content-left">
+          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p>
+        </div>
+        <span class="timeline-author">John Doe</span>
+      </div>
+      <div class="content-right-container">
+        <div class="content-right">
+          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. <span class="article-number">02</span></p>
+        </div>
+        <span class="timeline-author">John Doe</span>
+      </div>
+      <div class="meta-date">
+        <span class="date">18</span>
+        <span class="month">APR</span>
+      </div>
+    </div>
+    <!-- // Article -->
+    
+    <!-- Article -->
+    <div class="timeline-article">
+      <div class="content-left-container">
+        <div class="content-left">
+          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p>
+        </div>
+        <span class="timeline-author">John Doe</span>
+      </div>
+      <div class="content-right-container">
+        <div class="content-right">
+          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. <span class="article-number">02</span></p>
+        </div>
+        <span class="timeline-author">John Doe</span>
+      </div>
+      <div class="meta-date">
+        <span class="date">18</span>
+        <span class="month">APR</span>
+      </div>
+    </div>
+    <!-- // Article -->
+  </div>
+  <div class="timeline-end">End</div>
+</section>
+
+<!--<div id="faq">
   <div class="container pt-5 pb-5">
     <h1>FAQ</h1>
     <div>
@@ -147,5 +218,5 @@
       <p>If you run into trouble, you can often find the answer in the <a target="_blank" href="http://sailsjs.com/documentation">Sails.js documentation</a>.  If you're unsure about how to proceed, or completely stumped, be sure to check out the <a target="_blank" href="http://sailsjs.com/support">latest available resources</a>.</p>
     </div>
   </div>
-</div>
+</div>-->
 <%- /* Expose locals as `window.SAILS_LOCALS` :: */ exposeLocalsToBrowser() %>
