--- a/test-project/views/layouts/layout.ejs
+++ b/test-project/views/layouts/layout.ejs
@@ -69,7 +69,7 @@
           <a class="nav-item nav-link ml-2 mr-2 d-block d-sm-none" href="/logout">Sign out</a>
           <% } else { %>
           <!-- LOGGED-OUT NAVIGATION -->
-          <a class="nav-item nav-link ml-2 ml-md-0 mr-2" href="/faq">FAQ</a>
+          <a class="nav-item nav-link ml-2 ml-md-0 mr-2" href="/faq">Timeline</a>
           <a class="nav-item nav-link ml-2 ml-md-0 mr-2" href="/login">Log in</a>
           <!-- Only in desktop nav -->
           <div class="form-inline d-none ml-2 d-md-block" >
@@ -107,7 +107,7 @@
           <small class="nav-item d-inline-block"><a class="nav-link text-info px-1 px-sm-3" href="/logout">Sign out</a></small>
           <% } %>
         </div>
-        <small purpose="footer-copy">Copyright &copy; <%= sails.config.custom.platformCopyrightYear %> <a target="_blank" href="NEW_APP_COMPANY_ABOUT_HREF">NEW_APP_COMPANY_NAME</a>. <br class="d-block d-sm-none"/>All rights reserved.</small>
+        <small purpose="footer-copy">Copyright &copy; 2023 <a target="_blank" href="NEW_APP_COMPANY_ABOUT_HREF">Innovust LLC</a>. <br class="d-block d-sm-none"/>All rights reserved.</small>
       </footer>
     </div>
 
