--- a/test-project/views/pages/faq.ejs
+++ b/test-project/views/pages/faq.ejs
@@ -7,19 +7,21 @@
     <div class="timeline-article">
       <div class="content-left-container">
         <div class="content-left">
-          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. Mankind, let us preserve and increase this beauty, and not destroy it! <span class="article-number">01</span></p>
+          <p>When I was born, September 17th 1976, the song "You should be dancing" by Bee Gees. <iframe width="260" height="215" src="https://www.youtube.com/embed/_JoZS6LgqYI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <span class="article-number">01</span></p>
         </div>
-        <span class="timeline-author">John Doe</span>
+        <span class="timeline-author">Sigurjon Vidalin</span>
       </div>
       <div class="content-right-container">
         <div class="content-right">
-          <p>When I orbited the Earth in a spaceship, I saw for the first time how beautiful our planet is. <span class="article-number">02</span></p>
+          <p>I still remember well, to this day, when I saw the album Destroyer by KISS, which was actually publised in my birth year of 1976. Their appearance was different and cool, so me and my childhood friend would blast the vinyl when his dad wasn't home. My favorite song was Shout it out loud! <iframe width="260" height="215" src="https://www.youtube.com/embed/sohB922c2uQ" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <span class="article-number">02</span></p>
         </div>
-        <span class="timeline-author">John Doe</span>
+        <span class="timeline-author">Sigurjon Vidalin</span>
       </div>
       <div class="meta-date">
-        <span class="date">18</span>
-        <span class="month">APR</span>
+        <br/>
+        <span class="month">1976</span>
+        <span class="month">-</span>
+        <span class="month">1981</span>
       </div>
     </div>
     <!-- // Article -->
